--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -1,6 +1,7 @@
 body#blog-archive .blog-container {
-  width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
+  padding: 0 20px;
   flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
@@ -48,10 +49,26 @@ body#blog-archive .blog-container .blog-block a:hover img {
   transition: transform 0.4s;
 }
 
+@media screen and (max-width: 799px) {
+  body#blog-archive .blog-container {
+    display: block;
+  }
+  body#blog-archive .blog-container .blog-block {
+    width: 55%;
+    margin: 3rem auto 0;
+  }
+}
+
+@media screen and (max-width: 499px) {
+  body#blog-archive .blog-container .blog-block {
+    width: 80%;
+  }
+}
+
 body#blog-single .blogSingle-container {
   margin: 0 auto;
   max-width: 1100px;
-  width: 100%;
+  width: 90%;
 }
 
 body#blog-single .blogSingle-container .blog-kv {
@@ -66,5 +83,6 @@ body#blog-single .blogSingle-container h1 {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 3rem;
+  line-height: 3rem;
 }
 /*# sourceMappingURL=blog.css.map */
