--- a/CSS/flow.css
+++ b/CSS/flow.css
@@ -64,6 +64,8 @@ body#flow .flow-container {
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
+  margin-bottom: 10rem;
+  width: 90%;
 }
 
 body#flow .flow-container .flowBlock {
@@ -104,5 +106,34 @@ body#flow .flow-container .flowBlock p.flowTtl span {
 
 body#flow .flow-container .flowBlock p.flowDesc {
   padding-left: 130px;
+}
+
+@media screen and (max-width: 999px) {
+  body#flow .flow-container .flowBlock p.flowTtl {
+    font-size: 22px;
+  }
+  body#flow .flow-container .flowBlock p.flowTtl span {
+    font-size: 26px;
+    padding: 4px 16px 8px 22px;
+  }
+}
+
+@media screen and (max-width: 799px) {
+  body#flow .flow-container .flowBlock p.flowTtl {
+    font-size: 16px;
+    padding: 16px 16px 16px 80px;
+  }
+  body#flow .flow-container .flowBlock p.flowTtl::before {
+    width: 115px;
+  }
+  body#flow .flow-container .flowBlock p.flowTtl span {
+    font-size: 18px;
+    padding: 4px 0 0 10px;
+  }
+  body#flow .flow-container .flowBlock p.flowDesc {
+    width: 95%;
+    margin: 1rem auto 0;
+    padding: 0;
+  }
 }
 /*# sourceMappingURL=flow.css.map */
