--- a/CSS/office.css
+++ b/CSS/office.css
@@ -30,6 +30,16 @@ body#office .address table th {
   }
 }
 
+@media screen and (max-width: 799px) {
+  body#office .address table {
+    width: 90%;
+  }
+  body#office .address table tr th {
+    padding: 1rem;
+    width: 25%;
+  }
+}
+
 body#office .policy {
   margin: 6rem auto;
   padding: 3rem 0;
@@ -120,11 +130,12 @@ body#office .policy .policy-container .policy-wrap .policy-text p {
   }
   body#office .policy .policy-container .policy-wrap .policy-img {
     margin: auto;
-    width: 20%;
+    width: 50%;
+    max-width: 200px;
   }
   body#office .policy .policy-container .policy-wrap .policy-img img {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
   }
   body#office .policy .policy-container .policy-wrap .policy-text {
     width: 90%;
@@ -165,7 +176,7 @@ body#office .self h2::after {
 body#office .self .self-wrap {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: start;
   margin: 4rem auto 0;
 }
 
@@ -185,6 +196,7 @@ body#office .self .self-wrap .self-img img {
 
 body#office .self .self-wrap .self-text {
   width: 550px;
+  margin-left: 2rem;
 }
 
 body#office .self .self-wrap .self-text p {
@@ -192,12 +204,19 @@ body#office .self .self-wrap .self-text p {
 }
 
 body#office .self .self-wrap .self-text p:nth-child(1) {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: bold;
+  display: inline-block;
 }
 
 body#office .self .self-wrap .self-text p:nth-child(2) {
   color: #605f5f;
+  display: inline-block;
+  margin-left: 2rem;
+}
+
+body#office .self .self-wrap .self-text p:nth-child(3) {
+  margin-top: 1rem;
 }
 
 @media screen and (max-width: 999px) {
@@ -207,7 +226,6 @@ body#office .self .self-wrap .self-text p:nth-child(2) {
   body#office .self .self-wrap {
     display: flex;
     justify-content: space-between;
-    align-items: start;
   }
   body#office .self .self-wrap .self-img {
     margin-top: 0;
@@ -221,15 +239,33 @@ body#office .self .self-wrap .self-text p:nth-child(2) {
   body#office .self .self-wrap .self-text p:nth-child(1) {
     font-size: 1.5rem;
     font-weight: bold;
-    display: inline-block;
   }
   body#office .self .self-wrap .self-text p:nth-child(2) {
     color: #605f5f;
-    display: inline-block;
-    margin-left: 2rem;
   }
-  body#office .self .self-wrap .self-text p:nth-child(3) {
-    margin-top: 1rem;
+}
+
+@media screen and (max-width: 799px) {
+  body#office .self .self-wrap {
+    display: block;
+  }
+  body#office .self .self-wrap .self-img {
+    text-align: center;
+  }
+  body#office .self .self-wrap .self-img img {
+    width: 170px;
+    height: 170px;
+  }
+  body#office .self .self-wrap .self-text {
+    width: 90%;
+    margin: 2rem auto 0;
+    text-align: center;
+  }
+  body#office .self .self-wrap .self-text p {
+    text-align: justify;
+  }
+  body#office .self .self-wrap .self-text p br {
+    display: none;
   }
 }
 /*# sourceMappingURL=office.css.map */
