--- a/CSS/product.css
+++ b/CSS/product.css
@@ -5,6 +5,7 @@ body#product .product-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px;
 }
 
 body#product .product-container .product-box {
@@ -17,18 +18,25 @@ body#product .product-container .product-box a {
   transition: 0.4s;
 }
 
-body#product .product-container .product-box a img {
-  width: 100%;
+body#product .product-container .product-box a .pro-box-img {
+  height: 180px;
+  overflow: hidden;
+  text-align: center;
+}
+
+body#product .product-container .product-box a .pro-box-img img {
+  width: auto;
+  height: 100%;
   transition: transform 0.4s;
   transition: 0.4s;
 }
 
 body#product .product-container .product-box a .pro-cate {
   margin: 1rem 0 0;
-  font-size: 14px;
+  font-size: 12px;
   color: #fff;
   display: inline-block;
-  padding: 2px 18px 2px;
+  padding: 1px 14px 0px;
   background-color: #333;
   border-radius: 15px;
   font-weight: bold;
@@ -57,13 +65,16 @@ body#product .product-container .product-box a:hover img {
     display: block;
   }
   body#product .product-container .product-box {
-    width: 85%;
+    width: 50%;
     margin: 0 auto;
     margin-bottom: 4rem;
   }
 }
 
 @media screen and (max-width: 799px) {
+  body#product .product-container .product-box {
+    width: 90%;
+  }
   body#product .product-container .product-box a .pro-cate {
     font-weight: normal;
     padding: 0px 8px 0px;
@@ -78,7 +89,104 @@ body#product .product-container .product-box a:hover img {
 }
 
 body#product .product-container .product-box {
-  margin-bottom: 6rem;
+  margin-bottom: 4rem;
+}
+
+body#product .detail-btn {
+  margin: 3rem auto;
+  text-align: center;
+  margin: 0 auto 5rem;
+}
+
+body#product .detail-btn a {
+  text-decoration: none;
+}
+
+body#product .detail-btn a span {
+  display: inline-block;
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  background: #fff;
+  padding: 18px 74px 18px 60px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+  transition: 0.3s;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.12);
+}
+
+body#product .detail-btn a span::before {
+  content: "";
+  width: 100%;
+  height: 101%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #333;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform ease 0.3s;
+  border-radius: 4px;
+}
+
+body#product .detail-btn a span::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border: 0px;
+  border-top: solid 2px #333;
+  border-right: solid 2px #333;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 39%;
+  right: 26px;
+}
+
+body#product .detail-btn a span:hover {
+  color: #fff;
+}
+
+body#product .detail-btn a span:hover::before {
+  transform-origin: 0% 50%;
+  transform: scaleX(1);
+}
+
+body#product .detail-btn a span:hover::after {
+  border-top: solid 2px #fff;
+  border-right: solid 2px #fff;
+}
+
+@media screen and (max-width: 999px) {
+  body#product .detail-btn a span {
+    font-size: 14px;
+    font-weight: normal;
+    padding: 12px 36px 12px 22px;
+  }
+  body#product .detail-btn a span::after {
+    position: absolute;
+    top: 39%;
+    right: 18px;
+    width: 6px;
+    height: 6px;
+  }
+}
+
+@media screen and (max-width: 799px) {
+  body#product .detail-btn a span {
+    font-size: 14px;
+    font-weight: normal;
+    padding: 10px 34px 10px 20px;
+  }
+  body#product .detail-btn a span::after {
+    position: absolute;
+    top: 39%;
+    right: 18px;
+    width: 6px;
+    height: 6px;
+  }
 }
 
 body#productDesc .productDesc-container {
@@ -92,7 +200,7 @@ body#productDesc .productDesc-container h1 {
 }
 
 body#productDesc .productDesc-container .product-kv {
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   padding: 4rem 0;
   background: #f3f3f3;
@@ -110,9 +218,10 @@ body#productDesc .productDesc-container .productDesc-wrap table {
 }
 
 body#productDesc .productDesc-container .productDesc-wrap table tr td {
-  padding: 1.25rem 2rem;
+  padding: 1.25rem 2rem 1rem;
   font-size: 1rem;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #DDD;
+  line-height: 1.3;
 }
 
 body#productDesc .productDesc-container .productDesc-wrap table tr td a {
@@ -122,11 +231,20 @@ body#productDesc .productDesc-container .productDesc-wrap table tr td a {
 
 body#productDesc .productDesc-container .fullscreen-img {
   border: 1px solid #DDDDDD;
-  width: 100%;
+  width: 70%;
   margin: 6rem auto;
 }
 
 body#productDesc .productDesc-container .fullscreen-img img {
   width: 100%;
+}
+
+@media screen and (max-width: 999px) {
+  body#productDesc .productDesc-container .productDesc-wrap table {
+    width: 90%;
+  }
+  body#productDesc .productDesc-container .productDesc-wrap table tr td {
+    padding: 1.25rem 1rem 1rem;
+  }
 }
 /*# sourceMappingURL=product.css.map */
