--- a/CSS/service.css
+++ b/CSS/service.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
+  margin-bottom: 6rem;
 }
 
 #service .service-container {
@@ -11,7 +12,7 @@
   align-items: center;
   max-width: 1100px;
   margin: 0 auto;
-  padding-bottom: 5rem;
+  padding: 0 1rem 5rem;
 }
 
 #service .service-container .service-block {
@@ -134,14 +135,22 @@
   font-size: 2rem;
   font-weight: bold;
   letter-spacing: 0.25rem;
-  padding: 4rem 0 1rem;
+  padding: 5rem 0 3rem;
 }
 
-.service-homepage .service-contents .homepage-block {
+.service-homepage .service-contents .homepage-container {
+  padding: 0 20px;
+}
+
+.service-homepage .service-contents .homepage-container .homepage-block {
   margin-bottom: 4rem;
 }
 
-.service-homepage .service-contents .homepage-block .case span {
+.service-homepage .service-contents .homepage-container .homepage-block:last-child {
+  margin-bottom: 0;
+}
+
+.service-homepage .service-contents .homepage-container .homepage-block .case span {
   color: #fff;
   background: #3a65bb;
   font-weight: bold;
@@ -151,14 +160,22 @@
   padding: 8px 12px 8px 14px;
 }
 
-.service-homepage .service-contents .homepage-block h2 {
+.service-homepage .service-contents .homepage-container .homepage-block h2 {
   margin: 1.25rem 0 1.5rem;
   font-size: 1.5rem;
   letter-spacing: 0.15rem;
 }
 
-.service-homepage .service-contents .homepage-block .block-desc p {
+.service-homepage .service-contents .homepage-container .homepage-block .block-desc p {
   letter-spacing: 1px;
+}
+
+.service-lppage .service-contents .lp-container {
+  padding: 0 20px;
+}
+
+.service-lppage .service-contents .lp-container .block2 {
+  margin-top: 4rem;
 }
 
 .service-lppage .service-contents .lp-container .block2 .img-wrap ul {
@@ -172,69 +189,123 @@
   width: 16%;
   background: url(../IMG/lp/arrow-r.png) no-repeat right;
   background-size: 24px;
-  padding-right: 3.2%;
+  padding-right: 3.5%;
 }
 
 .service-lppage .service-contents .lp-container .block2 .img-wrap ul li:last-child {
   background: none;
+  padding-right: 0;
 }
 
 .service-lppage .service-contents .lp-container .block2 .img-wrap ul li img {
   width: 100%;
 }
 
-body.service-advertisement .block1 {
+.service-lppage .service-contents .lp-container .block2 .block-desc {
+  margin-top: 1rem;
+}
+
+@media screen and (max-width: 799px) {
+  .service-lppage .service-contents .lp-container .block2 .img-wrap ul {
+    margin: auto;
+    flex-wrap: wrap;
+  }
+  .service-lppage .service-contents .lp-container .block2 .img-wrap ul li {
+    width: 28%;
+    margin-top: 2rem;
+    padding-right: 5.5%;
+    background: url(../IMG/lp/arrow-r.png) no-repeat right;
+    background-size: 10%;
+  }
+  .service-lppage .service-contents .lp-container .block2 .img-wrap ul li:nth-child(3) {
+    background: none;
+    padding-right: 0;
+  }
+  .service-lppage .service-contents .lp-container .block2 .img-wrap ul li:last-child {
+    margin-right: auto;
+    margin-left: 2.5%;
+  }
+}
+
+body.service-advertisement .service-contents .advertisement-container {
+  padding: 0 20px;
+}
+
+body.service-advertisement .service-contents .advertisement-container .block1 {
   border-bottom: 1px solid #dddddd;
   padding-bottom: 2rem;
   margin-bottom: 4rem;
 }
 
-body.service-advertisement .block1 .block1-2 {
+body.service-advertisement .service-contents .advertisement-container .block1 .block1-2 {
   margin-bottom: 1.75rem;
 }
 
-body.service-advertisement .block1 .block1-2 h3 {
+body.service-advertisement .service-contents .advertisement-container .block1 .block1-2 h3 {
   display: inline-block;
   background: url(../IMG/advertisement/ico-check.svg) no-repeat left;
   background-size: 18px;
   padding-left: 24px;
 }
 
-body.service-advertisement .block2 {
+body.service-advertisement .service-contents .advertisement-container .block2 {
   padding-bottom: 4.75rem;
   margin-bottom: 5rem;
 }
 
-body.service-advertisement .block2 .block2-wrap {
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap {
   display: flex;
   justify-content: space-between;
 }
 
-body.service-advertisement .block2 .block2-wrap .block2-1,
-body.service-advertisement .block2 .block2-wrap .block2-2 {
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-1,
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-2 {
   padding: 2rem 2.5rem;
   width: 40%;
   border: 1px solid #333;
 }
 
-body.service-advertisement .block2 .block2-wrap .block2-1 h3,
-body.service-advertisement .block2 .block2-wrap .block2-2 h3 {
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-1 h3,
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-2 h3 {
   margin-top: 0;
 }
 
-body.service-advertisement .block2 .block2-wrap .block2-1 table,
-body.service-advertisement .block2 .block2-wrap .block2-2 table {
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-1 table,
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-2 table {
   width: 100%;
 }
 
-body.service-advertisement .block2 .block2-wrap .block2-1 table tr:nth-child(1) td,
-body.service-advertisement .block2 .block2-wrap .block2-2 table tr:nth-child(1) td {
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-1 table tr:nth-child(1) td,
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-2 table tr:nth-child(1) td {
   padding-bottom: 0.75rem;
 }
 
-body.service-advertisement .block2 .block2-wrap .block2-1 table tr td,
-body.service-advertisement .block2 .block2-wrap .block2-2 table tr td {
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-1 table tr td,
+body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-2 table tr td {
   width: 35%;
+}
+
+@media screen and (max-width: 799px) {
+  body.service-advertisement .service-contents .advertisement-container .block1 h2, body.service-advertisement .service-contents .advertisement-container .block2 h2 {
+    text-align: center;
+  }
+  body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap {
+    display: block;
+  }
+  body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-1,
+  body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-2 {
+    width: 80%;
+    padding: 2rem 1rem;
+    margin: 0 auto 2rem;
+  }
+  body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-1 table tr td,
+  body.service-advertisement .service-contents .advertisement-container .block2 .block2-wrap .block2-2 table tr td {
+    font-size: 14px;
+  }
+}
+
+body.service-maintenance .service-contents .maintenance-container {
+  padding: 0 20px;
 }
 
 body.service-maintenance .service-contents .maintenance-container .block1 {
