--- a/SASS/blog.scss
+++ b/SASS/blog.scss
@@ -12,7 +12,7 @@ body#blog-single {
   .blogSingle-container {
     margin: 0 auto;
     max-width: 1100px;
-    width: 100%;
+    width: 90%;
     .blog-kv {
       margin: 5rem auto;
       img {
@@ -23,6 +23,7 @@ body#blog-single {
       font-size: 2rem;
       text-align: center;
       margin-bottom: 3rem;
+      line-height: 3rem;
     }
   }
 }
