--- a/SASS/common.scss
+++ b/SASS/common.scss
@@ -246,9 +246,10 @@ header {
 .breadCrumb {
   margin-top: 95px;
   width: 90%;
+  max-width: 1100px !important;
   ul {
     display: flex;
-    padding: 2rem 0 0;
+    padding: 3rem 0 0;
     li {
       list-style: none;
       margin-right: 0.75rem;
@@ -262,6 +263,21 @@ header {
   }
   @media screen and(max-width: 999px) {
     margin-top: 85px;
+    ul {
+      li {
+        background: url(../IMG/common/arrow-right.png) no-repeat right 2px;
+        background-size: 8px;
+        padding-right: 22px;
+      }
+    }
+  }
+  @media screen and(max-width: 999px) {
+    ul {
+      li {
+        background: url(../IMG/common/arrow-right.png) no-repeat right 1px;
+        background-size: 8px;
+      }
+    }
   }
 }
 h1.page-h1 {
@@ -271,9 +287,18 @@ h1.page-h1 {
   letter-spacing: 0.25rem;
   margin: 8rem auto 3rem;
 }
-.h1-desc p {
-  text-align: center;
-  margin-bottom: 5rem;
+.h1-desc {
+  width: 94%;
+  margin: 0 auto;
+  p {
+    text-align: center;
+    margin-bottom: 5rem;
+  }
+  @media screen and(max-width: 799px) {
+    p br {
+      display: none;
+    }
+  }
 }
 h2.bl-b {
   border-left: solid 5px #7db4e6;
