--- a/SASS/home.scss
+++ b/SASS/home.scss
@@ -1,7 +1,8 @@
 @import "_accordion";
 @import "_mixin";
 
-#top {
+// #top {
+.home {
   .kv {
     position: relative;
     max-width: 1900px;
@@ -299,11 +300,33 @@
               }
             }
             .blog-text {
-              margin-top: 1rem;
+              margin-top: 0.5rem;
+              span {
+                display: inline-block;
+                font-size: 14px;
+                margin-top: 0.5rem;
+              }
+              .blog-cate ul {
+                display: flex;
+                li {
+                  list-style: none;
+                  margin-left: 0.25rem;
+                  display: inline-block;
+                  padding: 4px 6px 5px;
+                  border: 1px solid #DDD;
+                  color: #333;
+                  font-size: 10px;
+                  background: #fff;
+                  &:first-child {
+                    margin-left: 0;
+                  }
+                }
+              }
               h3 {
                 margin-bottom: 0;
-                margin-top: 0.75rem;
+                margin-top: 0.5rem;
                 line-height: 1.5rem;
+                font-size: 1.1rem;
               }
             }
             &:hover {
