--- a/SASS/office.scss
+++ b/SASS/office.scss
@@ -28,6 +28,17 @@ body#office {
         width: 80%;
       }
     }
+    @media screen and(max-width: 799px) {
+      table {
+        width: 90%;
+        tr {
+          th {
+            padding: 1rem;
+            width: 25%;
+          }
+        }
+      }
+    }
   }
   .policy {
     margin: 6rem auto;
@@ -100,10 +111,11 @@ body#office {
           margin-bottom: 5rem;
           .policy-img {
             margin: auto;
-            width: 20%;
+            width: 50%;
+            max-width: 200px;
             img {
-              width: 100%;
-              height: 100%;
+              width: 90%;
+              height: 90%;
             }
           }
           .policy-text {
@@ -132,7 +144,7 @@ body#office {
     .self-wrap {
       display: flex;
       justify-content: space-between;
-      align-items: end;
+      align-items: start;
       margin: 4rem auto 0;
       .self-img {
         margin-top: 2rem;
@@ -147,15 +159,22 @@ body#office {
       }
       .self-text {
         width: 550px;
+        margin-left: 2rem;
         p {
           text-align: justify;
         }
         p:nth-child(1) {
-          font-size: 1.2rem;
+          font-size: 1.5rem;
           font-weight: bold;
+          display: inline-block;
         }
         p:nth-child(2) {
           color: #605f5f;
+          display: inline-block;
+          margin-left: 2rem;
+        }
+        p:nth-child(3) {
+          margin-top: 1rem;
         }
       }
     }
@@ -164,15 +183,8 @@ body#office {
       .self-wrap {
         display: flex;
         justify-content: space-between;
-        align-items: start;
-        // margin: 4rem auto 0;
         .self-img {
-          // width: 25%;
           margin-top: 0;
-          img {
-            // width: 100%;
-            // height: 100%;
-          }
         }
         .self-text {
           width: 63%;
@@ -182,16 +194,35 @@ body#office {
           p:nth-child(1) {
             font-size: 1.5rem;
             font-weight: bold;
-            display: inline-block;
           }
           p:nth-child(2) {
             color: #605f5f;
-            display: inline-block;
-            margin-left: 2rem;
           }
-          p:nth-child(3) {
-            margin-top: 1rem;
+      
+        }
+      }
+    }
+    @media screen and(max-width: 799px) {
+      .self-wrap {
+       display: block;
+        .self-img {
+          text-align: center;
+          img {
+            width: 170px;
+            height: 170px;
           }
+        }
+        .self-text {
+          width: 90%;
+          margin: 2rem auto 0;
+          text-align: center;
+          p {
+            text-align: justify;
+            br {
+              display: none;
+            }
+          }
+      
         }
       }
     }
