--- a/SASS/product.scss
+++ b/SASS/product.scss
@@ -3,9 +3,15 @@
 body#product {
   .product-container {
     @include product-container;
+    padding: 0 20px;
     .product-box {
-      margin-bottom: 6rem;
+      margin-bottom: 4rem;
+      // margin-top: 4rem;
     }
+  }
+    .detail-btn {
+    @include detail-btn;
+    margin: 0 auto 5rem;
   }
 }
 
@@ -19,7 +25,7 @@ body#productDesc {
       text-align: center;
     }
     .product-kv {
-      width: 100%;
+      width: 90%;
       margin: 0 auto;
       padding: 4rem 0;
       background: #f3f3f3;
@@ -33,9 +39,10 @@ body#productDesc {
       margin: 6rem auto;
       border-collapse: collapse;
       tr td {
-        padding: 1.25rem 2rem;
+        padding: 1.25rem 2rem 1rem;
         font-size: 1rem;
-        border-bottom: 1px solid #333;
+        border-bottom: 1px solid #DDD;
+        line-height: 1.3;
         a {
           text-decoration: underline;
           color: #333;
@@ -46,11 +53,21 @@ body#productDesc {
 
     .fullscreen-img {
       border: 1px solid #DDDDDD;
-      width: 100%;
+      width: 70%;
       margin: 6rem auto;
       img {
         width: 100%;
       }
     }
+  }
+  @media screen and(max-width: 999px) {
+  .productDesc-container {
+    .productDesc-wrap table {
+      width: 90%;
+      tr td {
+        padding: 1.25rem 1rem 1rem;
+      }
+    }
+  }
   }
 }
