--- a/SASS/question.scss
+++ b/SASS/question.scss
@@ -5,7 +5,7 @@ body#question {
   .question-container {
     width: 100%;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 0 auto 10rem;
     background: #f3f3f3;
     padding: 4rem 0 4rem;
     h2 {
@@ -13,6 +13,9 @@ body#question {
       margin: 3rem auto 2rem;
       font-weight: normal;
       padding-left: 1rem;
+    }
+    .q-block {
+      padding: 0 20px;
     }
     .accordion {
       max-width: 1000px;
