--- a/SASS/_mixin.scss
+++ b/SASS/_mixin.scss
@@ -427,9 +427,12 @@
   justify-content: space-between;
   align-items: center;
   .product-box {
-    width: 30%;
     overflow: hidden;
-    // margin-bottom: 6rem;
+    box-shadow: 0 0 15px #d4d0d0;
+    border-radius: 5px;
+    padding: 1rem;
+    width: 28%;
+    min-height: 275px;
     a {
       text-decoration: none;
       transition: 0.4s;
@@ -478,6 +481,7 @@
       width: 50%;
       margin: 0 auto;
       margin-bottom: 4rem;
+      min-height: auto;
       // a {
       //   .pro-cate {
       //     font-weight: normal;
@@ -495,7 +499,9 @@
   }
   @media screen and(max-width: 799px) {
     .product-box {
-      width: 90%;
+      width: 80%;
+      padding: 2rem;
+      min-height: auto;
       a {
         .pro-cate {
           font-weight: normal;
@@ -516,57 +522,136 @@
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 20px;
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .blog-block {
-    width: 30%;
-    overflow: hidden;
-    margin-top: 3rem;
-    a {
-      text-decoration: none;
-      transition: 0.4s;
-      img {
-        width: 100%;
-        transition: transform 0.4s;
-        transition: 0.4s;
-      }
-      span {
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
+  .blog-wrap {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .blog-block {
+      width: 28%;
+      border: 1px solid #dddddd;
+      padding: 1rem;
+      border-radius: 3px;
+      background: #f3f3f3;
+      margin-bottom: 2.5rem;
+      a {
+        text-decoration: none;
         color: #333;
-        display: inline-block;
-        margin-top: 0.5rem;
-        font-size: 14px;
-      }
-      h2 {
-        color: #333;
-        font-size: 16px;
-        font-weight: bold;
-        margin-top: 0.5rem;
-      }
-      &:hover {
-        opacity: 0.8;
-        transition: 0.4s;
-        img {
-          transform: scale(1.05);
-          transition: transform 0.4s;
+        .blog-img {
+          position: relative;
+          height: 160px;
+          text-align: center;
+          overflow: hidden;
+          &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+            transition: background-color 0.5s;
+          }
+          img {
+            // width: 100%;
+            transition: transform 0.5s;
+            width: auto;
+            height: 100%;
+          }
+        }
+        .blog-text {
+          margin-top: 0.5rem;
+          span {
+            display: inline-block;
+            font-size: 14px;
+            margin-top: 0.5rem;
+          }
+          .blog-cate ul {
+            display: flex;
+            li {
+              list-style: none;
+              margin-left: 0.25rem;
+              display: inline-block;
+              padding: 4px 6px 5px;
+              border: 1px solid #ddd;
+              color: #333;
+              font-size: 10px;
+              background: #fff;
+              &:first-child {
+                margin-left: 0;
+              }
+            }
+          }
+          h3 {
+            margin-bottom: 0;
+            margin-top: 0.5rem;
+            line-height: 1.5rem;
+            font-size: 1.1rem;
+          }
+        }
+        &:hover {
+          .blog-img img {
+            transform: scale(1.2);
+            transition: transform 0.5s;
+          }
+          ::before {
+            background-color: rgba(0, 0, 0, 0.3);
+          }
         }
       }
     }
-  }
-  @media screen and(max-width: 799px) {
-    display: block;
-    .blog-block {
-      width: 55%;
-      margin: 3rem auto 0;
+    @media screen and(max-width: 799px) {
+      display: block;
+      .blog-block {
+        width: 55%;
+        margin: 3rem auto 0;
+      }
     }
-  }
-  @media screen and(max-width: 499px) {
-    .blog-block {
-      width: 80%;
+    @media screen and(max-width: 499px) {
+      .blog-block {
+        width: 80%;
+      }
     }
   }
 }
+// .blog-block {
+//   width: 30%;
+//   overflow: hidden;
+//   margin-top: 3rem;
+//   a {
+//     text-decoration: none;
+//     transition: 0.4s;
+//     img {
+//       width: 100%;
+//       transition: transform 0.4s;
+//       transition: 0.4s;
+//     }
+//     span {
+//       color: #333;
+//       display: inline-block;
+//       margin-top: 0.5rem;
+//       font-size: 14px;
+//     }
+//     h2 {
+//       color: #333;
+//       font-size: 16px;
+//       font-weight: bold;
+//       margin-top: 0.5rem;
+//     }
+//     &:hover {
+//       opacity: 0.8;
+//       transition: 0.4s;
+//       img {
+//         transform: scale(1.05);
+//         transition: transform 0.4s;
+//       }
+//     }
+//   }
+// }
+
 @mixin flowLabel {
   p.flowTtl {
     position: relative;
