--- a/SASS/common.scss
+++ b/SASS/common.scss
@@ -12,7 +12,7 @@ html {
 body {
   @include base-fontFamily;
   color: #333;
-  padding-top: 90px;
+  padding-top: 95px;
   p {
     @include base-p;
   }
@@ -244,42 +244,51 @@ header {
   }
 }
 .breadCrumb {
-  margin-top: 95px;
+  margin-top: 95px !important;
   width: 90%;
   max-width: 1100px !important;
-  ul {
-    display: flex;
-    padding: 3rem 0 0;
-    li {
-      list-style: none;
-      margin-right: 0.75rem;
-      background: url(../IMG/common/arrow-right.png) no-repeat right 3px;
-      background-size: 10px;
-      padding-right: 22px;
-      &:last-child {
-        background: none;
-      }
-    }
+  a {
+    color: #333;
   }
-  @media screen and(max-width: 999px) {
-    margin-top: 85px;
-    ul {
-      li {
-        background: url(../IMG/common/arrow-right.png) no-repeat right 2px;
-        background-size: 8px;
-        padding-right: 22px;
-      }
-    }
-  }
-  @media screen and(max-width: 999px) {
-    ul {
-      li {
-        background: url(../IMG/common/arrow-right.png) no-repeat right 1px;
-        background-size: 8px;
-      }
-    }
-  }
+  // ul {
+  //   display: flex;
+  //   padding: 3rem 0 0;
+  //   li {
+  //     list-style: none;
+  //     margin-right: 0.75rem;
+  //     background: url(../IMG/common/arrow-right.png) no-repeat right 3px;
+  //     background-size: 10px;
+  //     padding-right: 22px;
+  //     &:last-child {
+  //       background: none;
+  //     }
+  //   }
+  // }
+  // @media screen and(max-width: 999px) {
+  //   margin-top: 85px;
+  //   ul {
+  //     li {
+  //       background: url(../IMG/common/arrow-right.png) no-repeat right 2px;
+  //       background-size: 8px;
+  //       padding-right: 22px;
+  //     }
+  //   }
+  // }
+  // @media screen and(max-width: 999px) {
+  //   ul {
+  //     li {
+  //       background: url(../IMG/common/arrow-right.png) no-repeat right 1px;
+  //       background-size: 8px;
+  //     }
+  //   }
+  // }
 }
+.c-layout {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 h1.page-h1 {
   text-align: center;
   font-size: 2rem;
@@ -414,6 +423,9 @@ footer {
             line-height: 18px;
           }
         }
+      }
+      .f-right {
+        width: 75%;
       }
     }
   }
